tests/negative/test_pass_no_drop.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar (f:Foo::noDrop) () {
    block Foo {
        pass f;
    };
};

fnc main () () {};